# rossocket

./: CMakeLists.txt  README.md  package.xml
src/: socket_client.py  socket_ros_server.py  utils.py
